# realmview

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  install.sh  js.html  makefile  shell.nix  test.js
client/: Cargo.toml  index.html
client/src/: bridge.rs  client.rs  dropdown.rs  interactor.rs  lib.rs  programs.rs  scene.rs  start.rs  viewport.rs
client/src/bridge/: element.rs  event.rs  input.rs  mod.rs
client/src/dom/: dropdown.rs  element.rs  icon.rs  input.rs  menu.rs  mod.rs
client/src/dom/menu/: draw.rs  drawing.rs  dropdown.rs  layers.rs  mod.rs  scene.rs  sprite.rs  tools.rs
client/src/interactor/: changes.rs  details.rs  history.rs  holding.rs  mod.rs  test.rs
client/src/render/: drawing.rs  fog.rs  grid.rs  hollow.rs  mod.rs  programs.rs  shapes.rs  text.rs  texture.rs
client/src/render/webgl/: line.rs  mesh.rs  mod.rs  solid.rs  texture.rs
client/src/render/webgl/shaders/: single.frag
client/src/shaders/: solid.vert
client/web/: build.py  form.js  login.html  register.html  scene.html
client/web/include/: boostrap_js.html  head_common.html  media_card.html  scene.js
client/web/include/scene/media/: preview_card.html  scene_media.js
client/web/pages/: login.html  register.html  scene.html
scene/: Cargo.toml
scene/src/: comms.rs  drawing.rs  fog.rs  group.rs  layer.rs  lib.rs  perms.rs  point.rs  project.rs  rect.rs  requests.rs  serde.rs  sprite.rs  tests.rs
server/: Cargo.toml  schema.sql
server/sql/: schema.sql  test_data.sql
server/src/: auth.rs  content.rs  crypto.rs  database.rs  fs.rs  game.rs  main.rs  session.rs  utils.rs
server/src/api/: auth.rs  game.rs  media.rs  mod.rs  project.rs  register.rs  scene.rs  test.rs  upload.rs
server/src/api/req/: conn.rs  mod.rs  session.rs
server/src/game/: client.rs  game.rs  mod.rs  server.rs
server/src/games/: client.rs  game.rs  mod.rs  perms.rs  server.rs  sock.rs
server/src/handlers/: auth.rs  common.rs  game.rs  login.rs  logout.rs  media.rs  media_details.rs  mod.rs  project.rs  register.rs  scene.rs  upload.rs
server/src/models/: media.rs  mod.rs  project.rs  projectv2.rs  scene.rs  tests.rs  user.rs
server/src/req/: conn.rs  mod.rs  session.rs
server/src/warp_handlers/: game.rs  media.rs  mod.rs  scene.rs
src/: bridge.rs  lib.rs  programs.rs  scene.rs  start.rs
web/: README.md  build.py  constants.json  requirements.txt  test.py
web/include/: bootstrap_js.html  button.html  checkbox.html  common.css  common.js  confirmation_modal.html  constant.html  css.html  editable_input.html  file.html  form.js  head_common.html  header.html  icon.html  js.html  loading_icon.html  offcanvas_button.html  radio_check.html  rust_interface.js  test_session.html  toggle_button.html
web/include/form/: end.html  field.html  start.html
web/include/media/: card.html  main.html  media.js  media_card.html  media_modal.html  media_offcanvas.html  modal.html  offcanvas.html  preview_card.html
web/include/menu/: sprite_dropdown_option.html
web/include/nav/: item.html
web/include/offcanvas/: start.html
web/include/page/: start.html
web/include/page/float/: end.html  start.html
web/include/project/: new.js  project.html  project.js  scene.html
web/include/projects/: project.html  projects.js  scene.html
web/include/scene/: help_offcanvas.html  rust_interface.js  scene.css
web/include/scene/game/: game.js  game_offcanvas.html  role.js
web/include/scene/layers/: canvas_dropdown.html  canvas_list_item.html  layer_list_item.html  layers.css  layers.js  layers_list.html
web/include/scene/media/: media.js  media_card.html  media_modal.html  media_offcanvas.html
web/include/scene/menu/: menu.html  stroke_input.html
web/include/scene/menu/layers/: canvas_dropdown.html  canvas_list_item.html  layer_list_item.html  layers.js  layers_list.html
web/include/scene/menu/scene/: scene_menu.html
web/include/scene/menu/sprite/: sprite_menu.html
web/include/scene/menu/tools/: tools_menu.html
web/include/scene/project/: project.js  project_offcanvas.html
web/include/special/: accordion_item.html  colour_input.html  dropdown_button.html  dropdown_option.html  editable_input.html  header.html  icon_button.html  radio_check.html  toggle_button.html
web/include/special/form/: end.html  field.html  start.html  text.html
web/include/special/menu/: draw_dropdown_option.html  sprite_shape_option.html
web/include/special/nav/: item.html  start.html
web/include/tab/: start.html
web/pages/: disconnected.html  edit_project.html  editor.html  game.html  game_over.html  index.html  landing.html  login.html  media.html  new_project.html  not_found.html  project.html  projects.html  register.html  scene.html
