[package]
name = "wasmtest"
version = "0.1.0"
authors = ["OwenFeik <owenhfeik@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    'Blob',
    'CssStyleDeclaration',
    'Document',
    'Element',
    'File',
    'FileList',
    'FileReader',
    'HtmlCanvasElement',
    'HtmlElement',
    'HtmlImageElement',
    'HtmlInputElement',
    'InputEvent',
    'MouseEvent',
    'ProgressEvent',
    'Url',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGl2RenderingContext',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'Window',
]
