[package]
name = "server"
authors = ["OwenFeik <owenhfeik@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
scene = {path = "../scene"}
anyhow = "1"
bytes = "1"
futures = {version = "0.3", default-features = false}
ring = "0.16"
serde = "1"
serde_derive = "1"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "sqlite"]}
tokio = {version = "1", features = ["full"]}
warp = "0.3"
