[package]
name = "server"
authors = ["OwenFeik <owenhfeik@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.13" 
bincode = "1.3"
bytes = "1"
futures = {version = "0.3", default-features = false}
ring = "0.16"
scene = {path = "../scene"}
serde = "1"
serde_derive = "1"
sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "sqlite"]}
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
warp = "0.3"
