[package]
name = "server"
authors = ["OwenFeik <owenhfeik@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
scene = { path = "../scene" }
actix-web = "4"
actix-ws = "0.2.5"
actix-files = "0.6"
actix-multipart = "0.6"
base64 = "0.13"
bincode = "1.3"
bytes = "1"
env_logger = "0.10"
futures = { version = "0.3", default-features = false }
mime = "0.3"
once_cell = "1"
ring = "0.16"
serde = "1"
serde_derive = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.11.0", features = ["serde", "v7"] }
warp = "0.3.3"
